2009-07-15  Yong Li  <yong.li@torchmobile.com>

Reviewed by George Staikos.

         https://bugs.webkit.org/show_bug.cgi?id=27020
         msToGregorianDateTime should set utcOffset to 0 when outputIsUTC is false

         * wtf/DateMath.cpp:
         (WTF::gregorianDateTimeToMS):

Canonical link: https://commits.webkit.org/37548@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45918 268f45cc-cd09-0410-ab3c-d52691b4dbfc